# xiaoguai

./: .dockerignore  .env.local.example  .gitignore  .gitleaks.toml  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  README.zh-CN.md  ROADMAP.md  beacon.txt  clippy.toml  deny.toml  release-notes-v1.10.0.md  release-notes-v1.9.0.md  rust-toolchain.toml
.cargo/: audit.toml
crates/xiaoguai-acp/: Cargo.toml
crates/xiaoguai-acp/src/: delegate.rs  jsonrpc.rs  lib.rs  mapping.rs  runtime_delegate.rs  server.rs  transport.rs
crates/xiaoguai-acp/tests/: server_turn.rs
crates/xiaoguai-agent/: Cargo.toml
crates/xiaoguai-agent/src/: consult_gate.rs  event.rs  history.rs  hotl_gate.rs  lib.rs  loop_.rs  react.rs  skill_author_tool.rs  toolbox.rs
crates/xiaoguai-agent/tests/: compaction_integration.rs  hotl_gate.rs  hotl_legacy_no_suspend.rs  hotl_suspend.rs  hotl_suspend_cancel.rs  hotl_suspend_timeout.rs  react_loop.rs  single_turn.rs
crates/xiaoguai-anomaly/: Cargo.toml
crates/xiaoguai-anomaly/examples/: anomaly_orders.rs
crates/xiaoguai-anomaly/src/: backtest.rs  baseline.rs  detector.rs  lib.rs  registry.rs  series.rs  spec.rs
crates/xiaoguai-anomaly/tests/: accuracy_eval.rs  integration.rs
crates/xiaoguai-api/: Cargo.toml
crates/xiaoguai-api/catalog/: expert_prerequisites.json  mcp_marketplace.json
crates/xiaoguai-api/src/: audit.rs  audit_util.rs  auth.rs  coding_toolbox.rs  consult.rs  convert.rs  error.rs  eval.rs  expert_readiness.rs  glossary.rs  identity.rs  incident_pipeline.rs  incidents.rs  lib.rs  loop_tools.rs  loops.rs  marketplace.rs  mcp_serve.rs  orchestrate.rs  outcomes.rs  rate_limit.rs  rbac.rs  scheduler.rs  serve.rs  sessions_ext.rs  skill_proposals.rs  skills.rs  skills_rescan.rs  sse.rs  state.rs  static_ui.rs  today.rs  turn.rs  usage.rs  watchers.rs  workspaces.rs
crates/xiaoguai-api/tests/: admin_and_listing.rs  anomaly.rs  api.rs  audit_exports.rs  auth.rs  consult_mode.rs  dec041_error_guard.rs  experts.rs  fork.rs  glossary_injection.rs  hotl.rs  hotl_cross_feature_e2e.rs  hotl_decide_scope.rs  hotl_decisions.rs  hotl_escalation_id_rename.rs  hotl_eval.rs  hotl_persistence_replay.rs  incident_pipeline.rs  incident_store_sqlite.rs  incidents.rs  loops_controller.rs  marketplace_e2e.rs  mcp.rs  mcp_serve_e2e.rs  me_scopes.rs  memory.rs  memory_import_export.rs  messages_delete.rs  orchestrate.rs  outcomes.rs  personas.rs  rbac.rs  require_scope_extractor.rs  skill_proposals.rs  skills.rs  skills_rescan.rs  teams.rs  turn_lock.rs  usage.rs  watchers.rs  (+2 more)
crates/xiaoguai-audit/: Cargo.toml
crates/xiaoguai-audit/src/: chain.rs  export.rs  lib.rs  outcomes.rs  pdf.rs  redact.rs  sink.rs
crates/xiaoguai-audit/tests/: chain_basic.rs  chain_proptest.rs  export_integration.rs  outcomes_eval.rs  redact_chain.rs
crates/xiaoguai-auth/: Cargo.toml
crates/xiaoguai-auth/policies/: rbac_model.conf  rbac_policy.csv
crates/xiaoguai-auth/src/: jwks_cache.rs  jwt.rs  lib.rs  rbac.rs  redaction.rs
crates/xiaoguai-auth/tests/: jsonpath_fixture_parity.rs  jsonpath_fixtures.json  jwt_validation.rs  rbac_enforcement.rs
crates/xiaoguai-cli/: Cargo.toml  build.rs
crates/xiaoguai-cli/src/: cli_args.rs  lib.rs  main.rs
crates/xiaoguai-cli/tests/: backup_crypto.rs  backup_restore.rs  completions_generate.rs  manpages_generate.rs  mcp_cli.rs  pack_validate.rs  provider_cli.rs  remote_e2e.rs  schedule_cli.rs  self_update_check.rs  smoke.rs  tasks.rs  wave3_subcommands.rs
crates/xiaoguai-coding/: Cargo.toml
crates/xiaoguai-coding/src/: checkpoint.rs  error.rs  git.rs  governed.rs  lib.rs  mcp_client.rs  tools.rs  workspace.rs
crates/xiaoguai-coding/tests/: governed_transcript.rs
crates/xiaoguai-config/: Cargo.toml
crates/xiaoguai-config/src/: lib.rs
crates/xiaoguai-core/: Cargo.toml
crates/xiaoguai-core/src/: acp_bridge.rs  audit_bridge.rs  banners.rs  coding_bridge.rs  demo_tools.rs  eval_bridge.rs  hotl_bridge.rs  lib.rs  main.rs  memory_bridge.rs  outcomes_bridge.rs  pack_agents.rs  pack_runtime.rs  packs.rs  persona_seed.rs  scheduler_bridge.rs  sd_notify_bridge.rs  sessions_bridge.rs  skill_author_bridge.rs  skills_bridge.rs  skills_rescan_bridge.rs  today_bridge.rs  usage_bridge.rs  workspace_bridge.rs
crates/xiaoguai-core/tests/: coding_in_loop.rs  coding_per_session_default.rs  config_per_scope_expiry.rs  config_replay_page_size.rs  hotl_args_redaction.rs  hotl_cross_feature_e2e.rs  hotl_decisions_pg.rs  hotl_decisions_sqlite.rs  hotl_default_on.rs  hotl_gate_selection.rs  hotl_per_scope_expiry.rs  peer_mvp.rs
crates/xiaoguai-eval/: Cargo.toml
crates/xiaoguai-eval/src/: grader.rs  lib.rs  report.rs  runner.rs  suite.rs  types.rs
crates/xiaoguai-eval/tests/: example_suite.rs  regression_from_audit.rs
crates/xiaoguai-im-common/: Cargo.toml
crates/xiaoguai-im-common/src/: lib.rs
crates/xiaoguai-im-dingtalk/: Cargo.toml
crates/xiaoguai-im-dingtalk/src/: api.rs  lib.rs  stream.rs
crates/xiaoguai-im-dingtalk/tests/: stream_test.rs
crates/xiaoguai-im-discord/: Cargo.toml
crates/xiaoguai-im-discord/src/: gateway.rs  interactions.rs  lib.rs  outbound.rs  signature.rs
crates/xiaoguai-im-feishu/: Cargo.toml
crates/xiaoguai-im-feishu/src/: api.rs  lib.rs
crates/xiaoguai-im-gateway/: Cargo.toml
crates/xiaoguai-im-gateway/src/: dedup.rs  history.rs  lib.rs  main.rs  pg_history.rs  provider.rs  router.rs  sqlite_history.rs
crates/xiaoguai-im-gateway/tests/: dingtalk_route.rs  feishu_route.rs  wecom_route.rs
crates/xiaoguai-im-mattermost/: Cargo.toml
crates/xiaoguai-im-slack/: Cargo.toml
crates/xiaoguai-im-telegram/: Cargo.toml
crates/xiaoguai-im-wecom/: Cargo.toml
crates/xiaoguai-llm/: Cargo.toml
crates/xiaoguai-mcp/: Cargo.toml
crates/xiaoguai-mcp-exec/: Cargo.toml
crates/xiaoguai-mcp-exec-js/: Cargo.toml
crates/xiaoguai-mcp-exec-wasm/: Cargo.toml
crates/xiaoguai-memory/: Cargo.toml
crates/xiaoguai-migrate-smoke/: Cargo.toml
crates/xiaoguai-observability/: Cargo.toml
crates/xiaoguai-orchestrator/: Cargo.toml
(+2120 files in other folders)
