[workspace]
resolver = "2"
members = [
    "crates/xiaoguai-types",
    "crates/xiaoguai-config",
    "crates/xiaoguai-storage",
    "crates/xiaoguai-audit",
    "crates/xiaoguai-auth",
    "crates/xiaoguai-llm",
    "crates/xiaoguai-mcp",
    "crates/xiaoguai-rag",
    "crates/xiaoguai-scheduler",
    "crates/xiaoguai-eval",
    "crates/xiaoguai-agent",
    "crates/xiaoguai-api",
    "crates/xiaoguai-core",
    "crates/xiaoguai-im-gateway",
    "crates/xiaoguai-im-feishu",
    "crates/xiaoguai-im-dingtalk",
    "crates/xiaoguai-im-wecom",
    "crates/xiaoguai-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "BUSL-1.1"
authors = ["Xiaoguai Maintainers"]
repository = "https://github.com/xiaoguai-agent/xiaoguai"
homepage = "https://github.com/xiaoguai-agent/xiaoguai"

# (LICENSE Licensor + README URLs already point to xiaoguai-agent.)
readme = "README.md"

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
futures = "0.3"
async-trait = "0.1"

# error handling
anyhow = "1.0"
thiserror = "2.0"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# http / api
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# gRPC
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots"] }
tonic-build = "0.12"
prost = "0.13"
prost-build = "0.13"

# database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "migrate"] }

# valkey / redis-compatible client (valkey-rs once stable; for now redis crate works against valkey)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# auth / crypto
jsonwebtoken = "9.3"
casbin = { version = "2.5", default-features = false, features = ["runtime-tokio", "incremental"] }
age = "0.10"
ring = "0.17"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

# config
config = { version = "0.14", default-features = false, features = ["yaml"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# data
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }

# llm clients
async-openai = "0.26"
eventsource-stream = "0.2"

# mcp
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-async-rw", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "reqwest", "macros"] }

# scheduler
cron = "0.12"
notify = "7"
tempfile = "3"

# misc
once_cell = "1.20"
parking_lot = "0.12"
indexmap = { version = "2.7", features = ["serde"] }
bytes = "1.8"
mime = "0.3"
regex = "1.11"

# testing
mockito = "1.6"
proptest = "1.5"
insta = "1.41"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
