[workspace]
resolver = "2"
members = [
    "crates/xiaoguai-types",
    "crates/xiaoguai-config",
    "crates/xiaoguai-storage",
    "crates/xiaoguai-audit",
    "crates/xiaoguai-auth",
    "crates/xiaoguai-llm",
    "crates/xiaoguai-mcp",
    "crates/xiaoguai-mcp-exec",
    "crates/xiaoguai-mcp-exec-js",
    "crates/xiaoguai-mcp-exec-wasm",
    "crates/xiaoguai-rag",
    "crates/xiaoguai-scheduler",
    "crates/xiaoguai-runtime",
    "crates/xiaoguai-eval",
    "crates/xiaoguai-agent",
    "crates/xiaoguai-api",
    "crates/xiaoguai-core",
    "crates/xiaoguai-im-gateway",
    "crates/xiaoguai-im-feishu",
    "crates/xiaoguai-im-dingtalk",
    "crates/xiaoguai-im-wecom",
    "crates/xiaoguai-im-discord",
    "crates/xiaoguai-im-telegram",
    "crates/xiaoguai-im-mattermost",
    "crates/xiaoguai-im-slack",
    "crates/xiaoguai-cli",
    "crates/xiaoguai-orchestrator",
    "crates/xiaoguai-observability",
    "crates/xiaoguai-watch",
    "crates/xiaoguai-anomaly",
    "crates/xiaoguai-personas",
    "crates/xiaoguai-memory",
    "crates/xiaoguai-tasks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "BUSL-1.1"
authors = ["Xiaoguai Maintainers"]
repository = "https://github.com/xiaoguai-agent/xiaoguai"
homepage = "https://github.com/xiaoguai-agent/xiaoguai"
description = "Rust-implemented, audit-first, scheduler-native local agent platform."

# (LICENSE Licensor + README URLs already point to xiaoguai-agent.)
readme = "README.md"

# NOTE: cargo-dist (`[workspace.metadata.dist]` + .github/workflows/release.yml)
# was removed. It requires the workspace version to equal the release tag, but
# this project keeps Cargo.toml at 0.1.0 and drives the version from the git
# tag — so `dist host --tag vX.Y.Z` always failed with "nothing to Release".
# The Linux install story is the native .deb/.rpm (release-packages.yml) +
# bare-metal tarball (release-tarball.yml), both of which bundle the web UI.

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
futures = "0.3"
async-trait = "0.1"

# error handling
anyhow = "1.0"
thiserror = "2.0"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# http / api
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }
hyper = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# gRPC
tonic = { version = "0.14", features = ["transport", "tls", "tls-roots"] }
tonic-build = "0.12"
prost = "0.14"
prost-build = "0.13"

# database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "migrate"] }

# valkey / redis-compatible client (valkey-rs once stable; for now redis crate works against valkey)
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }

# auth / crypto
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
casbin = { version = "2.5", default-features = false, features = ["runtime-tokio", "incremental"] }
age = "0.10"
ring = "0.17"
base64 = "0.22"
hex = "0.4"
hmac = "0.13"
sha2 = "0.11"
sha1 = "0.11"
aes = "0.9"
# Sprint-8 S8-5: AES-256-GCM for MCP refresh-token encryption at rest.
# 0.10.x is the stable line; 0.11 is rc as of plan write.
aes-gcm = "0.10"
cbc = { version = "0.2", features = ["alloc", "block-padding"] }
cipher = "0.5"
rand = "0.10"
urlencoding = "2.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
quick-xml = { version = "0.40", features = ["serialize"] }

# config
config = { version = "0.15", default-features = false, features = ["yaml"] }
# Sprint-13 S13-0: humantime-serde lets `agent.hotl.expiry: "24h"` parse to
# Duration directly from YAML + env (the underlying `humantime` crate is
# small + stable + no transitive surface beyond `humantime` itself).
humantime-serde = "1.1"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.3"
dotenvy = "0.15"

# archive / compression
flate2 = "1.0"
tar = "0.4"

# data
uuid = { version = "1.23", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }

# llm clients
async-openai = "0.40"
eventsource-stream = "0.2"

# mcp
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-async-rw", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "reqwest", "macros"] }

# scheduler
cron = "0.16"
notify = "8"
notify-debouncer-full = "0.7"
tempfile = "3"

# observability
# default-features disabled to drop the `protobuf` exposition format (and its
# vulnerable protobuf 2.28 dep, RUSTSEC-2024-0437). We only use TextEncoder.
prometheus = { version = "0.14", default-features = false, features = ["process"] }
xiaoguai-observability = { path = "crates/xiaoguai-observability" }
opentelemetry = { version = "0.32", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.32"
tracing-opentelemetry = "0.33"

# document loaders (RAG)
pdf-extract = "0.10"
# Sprint-8 S8-6 (DEC-023.2): byte-deterministic PDF writer for
# compliance bundle export. Plan adjustment: typst 0.14 library API
# proved heavy for a one-template path; pdf-writer gives us deterministic
# output with a much smaller surface.
pdf-writer = "0.15"
zip = { version = "8", default-features = false, features = ["deflate"] }
scraper = "0.27"
pulldown-cmark = { version = "0.13", default-features = false }

# caching / watch dedup
moka = { version = "0.12", features = ["future"] }

# rate limiting
governor = "0.10"

# template engine (Jinja2-compatible; used by pack skill templates)
tera = "1.20"

# misc
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6"
indexmap = { version = "2.7", features = ["serde"] }
bytes = "1.8"
mime = "0.3"
regex = "1.11"

# websocket (DingTalk Stream API)
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# RAG backends
qdrant-client = { version = "1.13", default-features = false, features = ["serde"] }
tantivy = "0.26"

# testing
mockito = "1.6"
proptest = "1.5"
insta = "1.41"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
panic = "abort"

# cargo-dist builds release artefacts with this profile. We inherit the
# `release` profile but override `lto` and `codegen-units` to match the
# settings cargo-dist recommends for binary releases — slightly larger
# binaries for a much faster CI build.
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
# Noisy pedantic lints intentionally allowed (verified case-by-case to flag no
# real bugs): numeric casts in metrics/anomaly/timestamp code, and style nits.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
format_push_string = "allow"
implicit_hasher = "allow"
manual_let_else = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
should_implement_trait = "allow"
doc_overindented_list_items = "allow"
