[package]
name = "xiaoguai-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "axum HTTP server: REST + SSE."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
xiaoguai-mcp = { path = "../xiaoguai-mcp" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hyper = { workspace = true }
http-body-util = "0.1"

[lints]
workspace = true
