[package]
name = "xiaoguai-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "axum HTTP server: REST + SSE."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
xiaoguai-mcp = { path = "../xiaoguai-mcp" }
xiaoguai-auth = { path = "../xiaoguai-auth" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
# v0.11.2: eval pane endpoints reuse the EvalRunner / EvalSuite types
# straight from xiaoguai-eval so the wire shape stays one source of truth.
xiaoguai-eval = { path = "../xiaoguai-eval" }
# v0.9.1: serve our own Toolbox as an MCP server at /v1/mcp/serve.
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# v0.11.2: case-from-session emits YAML the operator pastes into a
# `.eval.yaml` file.
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hyper = { workspace = true }
http-body-util = "0.1"
serde_yaml = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
