[package]
name = "xiaoguai-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "axum HTTP server: REST + SSE."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
xiaoguai-audit = { path = "../xiaoguai-audit" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
xiaoguai-mcp = { path = "../xiaoguai-mcp" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
# v1.5.x — Tier-2 D.1 agent-authored skill proposals.
xiaoguai-tasks = { path = "../xiaoguai-tasks" }
xiaoguai-memory = { path = "../xiaoguai-memory", default-features = false }
# v1.8.0 (sprint-10b S10b-1): persona CRUD endpoints.
xiaoguai-personas = { path = "../xiaoguai-personas" }
# v0.12.0: shared agent-loop runtime used by REST + IM + scheduler.
xiaoguai-runtime = { path = "../xiaoguai-runtime" }
# T4.2: executive orchestration (parallel member fan-out + lead synthesis)
# behind POST /v1/sessions/:id/orchestrate.
xiaoguai-orchestrator = { path = "../xiaoguai-orchestrator" }
# v0.11.2: eval pane endpoints reuse the EvalRunner / EvalSuite types
# straight from xiaoguai-eval so the wire shape stays one source of truth.
xiaoguai-eval = { path = "../xiaoguai-eval" }
# v0.9.1: serve our own Toolbox as an MCP server at /v1/mcp/serve.
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
axum = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# v0.11.2: case-from-session emits YAML the operator pastes into a
# `.eval.yaml` file.
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
governor = { workspace = true }
# Sprint-12 S12-3: lock-free map for DecisionRegistry waiters.
dashmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xiaoguai-observability = { workspace = true }
# T6 self-healing: SqliteIncidentStore lives here (not xiaoguai-storage)
# because its ingest contract is the api-level `Incident` normalizer
# output; sqlx is already a transitive dep via xiaoguai-storage.
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hyper = { workspace = true }
http-body-util = "0.1"
serde_yaml = { workspace = true }
tempfile = { workspace = true }
# L3 loop tests name the SqlitePool type when threading it into the
# token-budget controller; it's already a transitive dep via xiaoguai-storage.
sqlx = { workspace = true }

[lints]
workspace = true
