[package]
name = "xiaoguai-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Append-only audit log with hmac chain + S3 sync (skeleton)."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
async-trait = { workspace = true }
# Sprint-8 S8-6 (DEC-023.2): byte-deterministic PDF rendering for
# compliance export. pdf-writer is the typst team's lower-level writer;
# we use it directly rather than the full typst library because we need
# a tiny deterministic surface, not a typesetting engine.
pdf-writer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
xiaoguai-observability = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
