[package]
name = "xiaoguai-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HotL argument redaction (DEC-HLD-014)."

[dependencies]
xiaoguai-storage = { path = "../xiaoguai-storage" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# Sprint-13 S13-4: JSONPath evaluator for HotL arg redaction. 0.3.x is the
# audited line (R13-3 risk row). Used only inside `RedactionRules::apply`.
jsonpath_lib = "0.3"

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
