[package]
name = "xiaoguai-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Xiaoguai command-line client."

[lib]
name = "xiaoguai_cli"
path = "src/lib.rs"

[[bin]]
name = "xiaoguai"
path = "src/main.rs"

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
xiaoguai-eval = { path = "../xiaoguai-eval" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
xiaoguai-config = { path = "../xiaoguai-config" }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = "0.2"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
parking_lot = { workspace = true }
tempfile = { workspace = true }
xiaoguai-api = { path = "../xiaoguai-api" }
xiaoguai-mcp = { path = "../xiaoguai-mcp" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }

[lints]
workspace = true
